# MartinBoutonsWifi

./: .gitignore  0main.pd  0test.pd  README.md  button_player.pd  buzz.pd  sequence_player.pd  state_is.pd  wifruit.pd
fw_boutonswifi/: .gitignore  CMakeLists.txt  help.txt  main.cpp  system.cpp  system.h  tcp_server.hpp  udp_server.hpp
fw_boutonswifi1/: CMakeLists.txt  help.txt  lwipopts.h  pt.uf2  test.pd  version.cpp
fw_boutonswifi2/: main.cpp
modules/: CMakeLists.txt
modules/dhcpserver/: dhcpserver.h
modules/wifraise/: CMakeLists.txt  cpuload.h  dnsserver.h  ota_server.cpp  ota_server.hpp
modules/ws2812par/: CMakeLists.txt  ws2812par.c
